Committing because scared

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <canvas id="stage"></canvas>
     <script src="./src/scripts/canvas/stage.js"></script>
     <canvas class="drumset" id="bass-drum"></canvas>
-    <script src="./src/scripts/canvas/drumset.js"></script>
+    <!-- <script src="./src/scripts/canvas/drumset.js"></script> -->
+    
 </body>
 
 </html>
