--- a/index.html
+++ b/index.html
@@ -19,19 +19,33 @@
             <form action="">
                 <input class="button" id="rock" type="submit" value="Rock">
             </form>
-            <br>
             <form action="">
                 <input class="button" id="electronic" type="submit" value="Electronic">
             </form>
         </div>
         
         <div id="recorder">
-            <h3 id="redording-studio">Click below to record your track</h3>
+            <h3 id="redording-studio">(coming soon) Click below to record your track</h3>
             <form action="">
                 <input class="button" id="record" type="submit" value="Start Recording">
             </form>
         </div>
+
+        <div>
+            <h3>How to play</h3>
+            <p class="controls">Bass Drum: 1 & Space Bar</p>
+            <p class="controls">Snare Drum: 2 & Y</p>
+            <p class="controls">One Tom: 3 & U</p>
+            <p class="controls">Two Tom: 4 & I</p>
+            <p class="controls">Floor Tom: 5 & O</p>
+            <p class="controls">High Hat Open: 6</p>
+            <p class="controls">High Hat Closed: 7 & E</p>
+            <p class="controls">Ride Cymbal: 8 & R</p>
+            <p class="controls">Crash One: 9</p>
+            <p class="controls">Crash Two: 0</p>
+        </div>
     </section>
+
     <canvas id="stage"></canvas>
     <script src="./src/scripts/canvas/stage.js"></script>
     <canvas class="drumset" id="bass-drum"></canvas>
