--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./dist/main.js"></script>
     <script src="./assets/howler.js-master/dist/howler.js"></script>
     <title>In The Pocket</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.png">
 </head>
 
 <body>
@@ -33,16 +34,18 @@
 
         <div>
             <h3>How to play</h3>
-            <p class="controls">Bass Drum: 1 & Space Bar</p>
-            <p class="controls">Snare Drum: 2 & Y</p>
-            <p class="controls">One Tom: 3 & U</p>
-            <p class="controls">Two Tom: 4 & I</p>
-            <p class="controls">Floor Tom: 5 & O</p>
-            <p class="controls">High Hat Open: 6</p>
-            <p class="controls">High Hat Closed: 7 & E</p>
-            <p class="controls">Ride Cymbal: 8 & R</p>
-            <p class="controls">Crash One: 9</p>
-            <p class="controls">Crash Two: 0</p>
+            <div id="controller">
+                <p class="controls">Bass Drum: 1 & Space Bar</p>
+                <p class="controls">Snare Drum: 2 & Y</p>
+                <p class="controls">One Tom: 3 & U</p>
+                <p class="controls">Two Tom: 4 & I</p>
+                <p class="controls">Floor Tom: 5 & O</p>
+                <p class="controls">High Hat Open: 6</p>
+                <p class="controls">High Hat Closed: 7 & E</p>
+                <p class="controls">Ride Cymbal: 8 & R</p>
+                <p class="controls">Crash One: 9</p>
+                <p class="controls">Crash Two: 0</p>
+            </div>
         </div>
     </section>
 
