--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./dist/main.js"></script>
     <script src="./assets/howler.js-master/dist/howler.js"></script>
     <title>In The Pocket</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
 </head>
 
 <body>
