--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <h1>This is a test</h1>
     <h1 id="title">♫ In The Pocket ♫</h1>
     <section id="buttons">
         <div id="kits">
