fix typo in modal

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <section class="instruction-modal" id="whole-modal">
             <h2 class="section-title" id="modal-title">Welcome to In The Pocket</h2>
             <p id="intro">
-                This is a drumset you can play on your keybord.
+                This is a drumset you can play on your keyboard.
                 You can switch between two drum sets with the buttons on the left of your screen.
             </p>
 
