added portfolio site to project

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <span>Wellfound:&nbsp;</span>
                     <img class="personal-link-images" src="./assets/wellfoundlogo.png">
                 </a>
-                <a class="personal-links" href="https://wellfound.com/u/emmett-wechsler" target="_blank">
+                <a class="personal-links" href="https://emmettw.dev/" target="_blank">
                     <span>Portfolio</span>
                 </a>
             </div>
